# otwrapy

./: .gitignore  .travis.yml  ChangeLog  README.rst  appveyor.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml
doc/: Makefile  api.rst  beam_wrapper.rst  conf.py  examples.rst  getting_started.rst  index.rst
otwrapy/: __init__.py  _otwrapy.py
otwrapy/examples/beam/: __init__.py  _probability_model.py  beam  beam_wrapper  wrapper.py
tests/: test_routines.py  test_wrapper.py
